--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head><link rel="stylesheet" href="style.css"></head>
+  <head><link rel="stylesheet" href="style1.css"></head>
   <body>
     <h1>Agenda Web</h1>
         <form id="contact-form">
